# TranslatorEn2Es

./: .gitignore  LICENSE  README.es.md  README.md  Transformer.py  TranslatorEn2Es.ipynb  dataset.py  pyproject.toml  tokenizer.py  training.ipynb  training_colab.ipynb  vocabulario.json
dataset/: script.py
notebooks/: results.ipynb  training_colab.ipynb
src/: cli.py  config.py  infer.py  inference.py  train.py  transformer.py
src/translatoren2es.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vocabulario/: vocabulario_32k.json
