[project]
name = "translatoren2es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "itables>=2.7.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]


[project.scripts]
traducir = "infer:main"

[tool.uv]
package = true
